# CMakeFFmpeg

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/include/: cmdutils.c  config.h  ffmpeg.c  ffmpeg_filter.c  ffmpeg_opt.c
app/libs/include/libavcodec/: mathops.h
app/libs/include/libavutil/: ffversion.h  internal.h  timestamp.h
app/src/androidTest/java/com/example/gzx/cmakeffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/gzx/cmakeffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/gzx/cmakeffmpeg/: ExampleUnitTest.java
